# Basic_Fluid-Sim

./: CMakeLists.txt  DOCUMENTATION.md  Makefile  README.md  aux-functions.cpp  aux-functions.hpp  constants.hpp  core-sim-functions.cpp  core-sim-functions.hpp  display-functions.cpp  display-functions.hpp  fluid_sim  imgui.ini  initializations.cpp  initializations.hpp  kernel.cu  main.cpp
Testing_Grounds/Testing_IMGUI/: --library=sfml-graphics  Makefile  imgui.ini  main.cpp  sfml_imgui_test  test.cpp
